src/objects/BMCServiceDesk__Change_History__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpChangeHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on Change Requests.</description>
    <fields>
        <fullName>BMCServiceDesk__Action__c</fullName>
        <description>This field stores the action linked to the change</description>
        <formula>BMCServiceDesk__FKAction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Attachments__c</fullName>
        <description>Used to store references to files sent along with an Email</description>
        <label>Attachments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Created_By__c</fullName>
        <description>This field stores the user name who created the record</description>
        <formula>BMCServiceDesk__FKCreated_By__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>This field stores the description related to the change</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Duration__c</fullName>
        <description>This field stores the duration of individual history record</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailConversationData__c</fullName>
        <description>Stores email addresses (From, To, and CC) of the email message.</description>
        <label>Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the foreign key value of the linked action</description>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
        <label>Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToChange__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Change Histories</relationshipLabel>
        <relationshipName>Change_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <description>This field stores the foreign key value of the linked change</description>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to change requests. User-defined actions are used to record details of the steps taken to complete the change request.</inlineHelpText>
        <label>Change</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Change_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set to the user who created the history record.</description>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds assigned staff information from parent record.</description>
        <inlineHelpText>This field holds assigned staff information from parent record.</inlineHelpText>
        <label>Current Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Histories_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Formatted_Duration__c</fullName>
        <description>This filed is used to display the hh:mm format duration on related list column</description>
        <formula>LPAD(TEXT(  FLOOR((BMCServiceDesk__Duration__c / 60))),2,TEXT(0))  &amp; &quot;:&quot; &amp;  LPAD(TEXT(MOD(BMCServiceDesk__Duration__c , 60)),2,TEXT(0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the value if the record is active or inactive</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <description>This field stores the data to allow users to enter in notes</description>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reply__c</fullName>
        <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos; ||  BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos;,HYPERLINK(&quot;apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=ChangeHistoryReply&amp;recordId=&quot;+ BMCServiceDesk__FKChange__r.Id+&quot;&amp;HistoryId=&quot;+Id+&quot;&amp;actionType=&quot;+BMCServiceDesk__FKAction__r.Name,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RichTextNote__c</fullName>
        <description>This field used to store the rich Text Email conversation.</description>
        <label>RichTextNote</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field stores the data if the record is system or user</description>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <label>Change History</label>
    <nameField>
        <label>Change History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Action_ID_Required</fullName>
        <active>true</active>
        <description>This rule checks for blank or empty Action</description>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
</CustomObject>